Created basic controllers component styles

--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
         </div>
     </section>
     <section class="c-controllers">
-        <select class="c-controllers__type" name="" id="">
-            <option value="inc" selected>+</option>
-            <option value="exp" >-</option>
-        </select>
-        <input class="c-controllers__description" type="text"  placeholder="Add a description">
-        <input class="c-controllers__amount" type="number" placeholder="Amount">
-        <button class="c-controllers__add">+</button>
+        <div class="u-wrapper u-wrapper--medium">
+            <div class="c-controllers__container">
+                <select class="c-controllers__type" name="" id="">
+                    <option value="inc" selected>+</option>
+                    <option value="exp" >-</option>
+                </select>
+                <input class="c-controllers__description" type="text"  placeholder="Add a description">
+                <input class="c-controllers__amount" type="number" placeholder="Amount">
+                <button class="c-controllers__add"><i class="icon-checkmark"></i></button>
+            </div>
+        </div>
     </section>
     <main>
         <div class="c-table">
