--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </select>
                 <input class="c-controllers__description" type="text"  placeholder="Add a description">
                 <input class="c-controllers__amount" type="number" placeholder="Amount">
-                <button class="c-controllers__add"><i class="icon-checkmark"></i></button>
+                <button class="c-controllers__add" id="button-add" ><i class="icon-checkmark"></i></button>
             </div>
         </div>
     </section>
