Created method in UIController to get data from the inputs

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <section class="c-controllers">
         <div class="u-wrapper u-wrapper--medium">
             <div class="c-controllers__container">
-                <select class="c-controllers__type" name="" id="">
-                    <option value="inc" selected>+</option>
-                    <option value="exp" >-</option>
+                <select class="c-controllers__type" name="" id="input-type">
+                    <option value="income" selected>+</option>
+                    <option value="expense" >-</option>
                 </select>
-                <input class="c-controllers__description" type="text"  placeholder="Add a description">
-                <input class="c-controllers__amount" type="number" placeholder="Amount">
+                <input class="c-controllers__description" type="text"  placeholder="Add a description" id="input-description">
+                <input class="c-controllers__amount" type="number" placeholder="Amount" id="input-amount">
                 <button class="c-controllers__add" id="button-add" ><i class="icon-checkmark"></i></button>
             </div>
         </div>
