Created AddListItem method in UIController

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     </section>
     <div class="u-wrapper">
         <main class="c-main">
-            <div class="c-table">
+            <div class="c-table" id="table-income">
                 <h2 class="c-table__title">Income</h2>
-                <div class="c-table__row">
+                <!-- ? LEFT FOR REFERENSE -->
+                <!-- <div class="c-table__row">
                     <p class="c-table__row-description">Salary</p>
                     <div class="c-table__row-division">
                         <p class="c-table__row-amount">+ 2,100.00</p>
@@ -56,11 +57,12 @@
                         <p class="c-table__row-amount">+ 1,500.00</p>
                         <button class="c-table__row-button"><i class="icon-cancel-circle"></i></button>
                     </div>
-                </div>
+                </div> -->
             </div>
-            <div class="c-table">
+            <div class="c-table" id="table-expense">
                 <h2 class="c-table__title c-table__title--expense">Expenses</h2>
-                <div class="c-table__row">
+                <!-- ? LEFT FOR REFERENCE -->
+                <!-- <div class="c-table__row">
                     <p class="c-table__row-description">Apartment rent</p>
                     <div class="c-table__row-division">
                         <p class="c-table__row-amount c-table__row-amount--expense">- 900.00</p>
@@ -75,7 +77,7 @@
                         <p class="c-table__row-percentage c-table__row-percentage--expense"><span>10%</span></p>
                         <button class="c-table__row-button c-table__row-button--expense"><i class="icon-cancel-circle"></i></button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
     </div>
