created displayBudget method in uiController

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="u-wrapper u-wrapper--mini">
             <div class="c-budget">
                 <p class="c-budget__text">Available Budget in %Month%</p>
-                <h1 class="c-budget__money">+ 2,345.64</h1>
+                <h1 class="c-budget__money" id="text-budget">+ 00.00</h1>
                 <div class="c-budget__row">
                     <p class="c-budget__row-description">Income</p>
-                    <p class="c-budget__row-amount">+ 4,300.00</p>
+                    <p class="c-budget__row-amount" id="text-income">+ 00.00</p>
                 </div>
                 <div class="c-budget__row c-budget__row--expense">
                     <p class="c-budget__row-description">Expenses</p>
-                    <p class="c-budget__row-amount">- 1,954.36</p>
-                    <p class="c-budget__row-percentage"><span>45%</span></p>
+                    <p class="c-budget__row-amount" id="text-expense">- 00.00</p>
+                    <p class="c-budget__row-percentage"><span id="text-percentage">0%</span></p>
                 </div>
             </div>
         </div>
