Created deleteItem method in budgetController

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </section>
     <div class="u-wrapper">
-        <main class="c-main">
+        <main class="c-main" id="main">
             <div class="c-table" id="table-income">
                 <h2 class="c-table__title">Income</h2>
                 <!-- ? LEFT FOR REFERENSE -->
