Created displayDate method in UIController

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="c-hero">
         <div class="u-wrapper u-wrapper--mini">
             <div class="c-budget">
-                <p class="c-budget__text">Available Budget in %Month%</p>
+                <p class="c-budget__text" id="text-date">Available Budget in %Month%</p>
                 <h1 class="c-budget__money" id="text-budget">+ 00.00</h1>
                 <div class="c-budget__row">
                     <p class="c-budget__row-description">Income</p>
@@ -80,7 +80,7 @@
                 </div> -->
             </div>
         </main>
-        
+
     </div>
     <script src="./js/app.js"></script>
 </body>
